--- a/files/package.json
+++ b/files/package.json
@@ -27,7 +27,7 @@
     "node-red-contrib-topic-link": "~0.1.0",
     "node-red-contrib-unsafe-function": "~0.8.0",
     "node-red-contrib-wait-paths": "~0.3.2",
-    "node-red-dashboard": "~2.25.0",
+    "node-red-dashboard": "~2.26.0",
     "node-red-node-rbe": "~0.2.9",
     "node-red-node-snmp": "0.0.25",
     "node-red-contrib-regression": "1.0.0",
@@ -35,7 +35,8 @@
     "node-red-contrib-cron-plus": "1.3.0",
     "node-red-contrib-countdown": "1.3.1",
     "node-red-contrib-graphs": "0.3.5",
-    "node-red-node-ui-iframe": "0.1.1"
+    "node-red-node-ui-iframe": "0.1.2",
+    "node-red-contrib-ui-led": "0.3.3"  
   },
     "node-red": {
         "settings": {
