--- a/files/package.json
+++ b/files/package.json
@@ -18,6 +18,7 @@
     "node-red-contrib-merge": "~0.1.1",
     "node-red-contrib-msg-router": "0.0.7",
     "node-red-contrib-msg-speed": "1.0.0",
+    "node-red-contrib-msg-size": "1.0.0",  
     "node-red-contrib-os": "~0.1.7",
     "node-red-contrib-prib-functions": "~0.14.1",
     "node-red-contrib-set-defaults": "~0.9.1",
