--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,6 @@ services:
         image: "novaas_festo_dpdm/dockerbase:1.0.0"
         environment:
             - "PORT_FORWARDING=${PORT_FORWARDING}" 
+            - "HOST=${HOST}"
         ports:
             - "${PORT_FORWARDING}:1880"
