--- a/files/package.json
+++ b/files/package.json
@@ -35,7 +35,8 @@
     "node-red-contrib-countdown": "1.3.1",
     "node-red-contrib-graphs": "0.3.5",
     "node-red-node-ui-iframe": "0.1.2",
-    "node-red-contrib-ui-led": "0.4.8"  
+    "node-red-contrib-ui-led": "0.4.8",
+    "node-red-contrib-httpauth": "1.0.12"  
   },
     "node-red": {
         "settings": {
