--- a/files/package.json
+++ b/files/package.json
@@ -36,7 +36,8 @@
     "node-red-contrib-graphs": "0.3.5",
     "node-red-node-ui-iframe": "0.2.1",
     "node-red-contrib-ui-led": "0.4.9",
-    "node-red-contrib-httpauth": "1.0.12"  
+    "node-red-contrib-httpauth": "1.0.12",
+    "node-red-contrib-sub-link": "1.2.4"  
   },
     "node-red": {
         "settings": {
