--- a/files/package.json
+++ b/files/package.json
@@ -38,7 +38,8 @@
     "node-red-contrib-ui-led": "0.4.9",
     "node-red-contrib-httpauth": "1.0.12",
     "node-red-contrib-sub-link": "1.2.4",
-    "node-red-contrib-pdfmake": "1.1.0"  
+    "node-red-contrib-pdfmake": "1.1.0",
+    "node-red-node-base64": "0.3.0"  
   },
     "node-red": {
         "settings": {
