--- a/files/package.json
+++ b/files/package.json
@@ -39,7 +39,8 @@
     "node-red-contrib-httpauth": "1.0.12",
     "node-red-contrib-sub-link": "1.2.4",
     "node-red-contrib-pdfmake": "1.1.0",
-    "node-red-node-base64": "0.3.0"  
+    "node-red-node-base64": "0.3.0",
+    "node-red-contrib-loadbalance": "0.5.0a"
   },
     "node-red": {
         "settings": {
