Inserting QRCODE in the main page

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT_FORWARDING=1870
 HOST=localhost
 BROKER_SERVICE_HOST=localhost
 BROKER_SERVICE_PORT=1883
+REPO_LOCATION=https://gitlab.com/novaas/catalog/nova-school-of-science-and-technology/novaas
