--- a/files/package.json
+++ b/files/package.json
@@ -41,7 +41,8 @@
     "node-red-contrib-pdfmake": "1.1.0",
     "node-red-node-base64": "0.3.0",
     "node-red-contrib-loadbalance": "0.5.0a",
-    "node-red-contrib-qrcode-generator": "0.4.0"
+    "node-red-contrib-qrcode-generator": "0.4.0",
+    "sense-rsa":"2.1.5"
   },
     "node-red": {
         "settings": {
