--- a/files/package.json
+++ b/files/package.json
@@ -41,9 +41,10 @@
   "node-red-contrib-pdfmake": "1.1.0",
   "node-red-node-base64": "0.3.0",
   "node-red-contrib-loadbalance": "0.5.0a",
+  "node-red-contrib-opcua": "0.2.262",
   "node-red-contrib-qrcode-generator": "0.4.0",
-  "sense-rsa":"2.1.5",
-  "node-red-node-sqlite":"1.0.3"
+  "node-red-node-sqlite":"1.0.3",
+  "sense-rsa":"2.1.5"
 },
   "node-red": {
       "settings": {
