Adding support for V3 and retro compatibility to v2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,10 @@
 services:
     novaas:
-        build: .
-        image: "registry.gitlab.com/novaas/catalog/nova-school-of-science-and-technology/novaas:latest"
+        build: 
+            context: .
+            args: 
+                - "AAS_VERSION=${AAS_VERSION}"
+        image: "registry.gitlab.com/novaas/catalog/nova-school-of-science-and-technology/novaas-v3:latest"
         environment:
             - "PORT_FORWARDING=${PORT_FORWARDING}" 
             - "HOST=${HOST}"
