--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,9 @@ Build:
     - uninova
   stage: build
   script:
+    # exctract AAS model version from .env
+    - export AAS_VERSION=$(grep '^AAS_VERSION=' .env | cut -d'=' -f2-')
+    - echo "AAS_VERSION is $AAS_VERSION"
     # fetches the latest image (not failing if image is not found)
     - docker pull $CI_REGISTRY_IMAGE:latest || true
     # builds the project, passing proxy variables, and vcs vars for LABEL
@@ -46,6 +49,7 @@ Build:
       --build-arg http_proxy=$http_proxy
       --build-arg https_proxy=$https_proxy
       --build-arg no_proxy=$no_proxy
+      --build-arg AAS_VERSION=$AAS_VERSION
       --build-arg VCS_REF=$CI_COMMIT_SHA
       --build-arg VCS_URL=$CI_PROJECT_URL
       --cache-from $CI_REGISTRY_IMAGE:latest
