--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,50 +1,37 @@
-# This is a GitLab CI configuration to build the project as a docker image
-# The file is generic enough to be dropped in a project containing a working Dockerfile
-# Author: Florent CHAUVEAU <florent.chauveau@gmail.com>
-# Mentioned here: https://blog.callr.tech/building-docker-images-with-gitlab-ci-best-practices/
-
-# do not use "latest" here, if you want this to work in the future
-image: docker:19.03.12
+# Use a more recent Docker version
+image: docker:24.0.5
 
 stages:
   - build
   - push
 
 services:
-    - docker:19.03.12-dind
+  - docker:24.0.5-dind  # Updated to a recent Docker version
 
 variables:
-  # fill those if you have a proxy in your environment
-  http_proxy:   ""
-  https_proxy:  ""
-  no_proxy:     ""
-
-# Use this if your GitLab runner does not use socket binding
-# services:
-#   - docker:dind
+  DOCKER_BUILDKIT: 1  # Enable BuildKit
+  BUILDX_BUILDER: uninova-builder  # Custom Buildx builder name
 
 before_script:
-  # docker login asks for the password to be passed through stdin for security
-  # we use $CI_JOB_TOKEN here which is a special token provided by GitLab
-  - echo -n $CI_JOB_TOKEN | docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-
+  # Enable Buildx in Docker
+  - docker buildx create --use --name $BUILDX_BUILDER
+  - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
 
 Build:
   tags: 
     - uninova
   stage: build
   script:
-    # exctract AAS model version from .env
+    # Extract AAS model version from .env
     - export AAS_VERSION=$(grep '^AAS_VERSION=' .env | cut -d'=' -f2-)
     - echo "AAS_VERSION is $AAS_VERSION"
-    # fetches the latest image (not failing if image is not found)
-    - docker pull $CI_REGISTRY_IMAGE:latest || true
-    # builds the project, passing proxy variables, and vcs vars for LABEL
-    # notice the cache-from, which is going to use the image we just pulled locally
-    # the built image is tagged locally with the commit SHA, and then pushed to 
-    # the GitLab registry
+
+    # Create the Buildx instance
+    - docker buildx create --use
+
+    # Build and push a multi-arch image
     - >
-      docker build
+      docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7
       --pull
       --build-arg http_proxy=$http_proxy
       --build-arg https_proxy=$https_proxy
@@ -54,39 +41,28 @@ Build:
       --build-arg VCS_URL=$CI_PROJECT_URL
       --cache-from $CI_REGISTRY_IMAGE:latest
       --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+      --push
       .
-    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
 
-# Here, the goal is to tag the "master" branch as "latest"
 Push latest:
   variables:
-    # We are just playing with Docker here. 
-    # We do not need GitLab to clone the source code.
     GIT_STRATEGY: none
   tags:
     - uninova
   stage: push
   only:
-    # Only "master" should be tagged "latest"
     - master
   script:
-    # Because we have no guarantee that this job will be picked up by the same runner 
-    # that built the image in the previous step, we pull it again locally
+    # Pull the built image and retag it as "latest"
     - docker pull $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
-    # Then we tag it "latest"
     - docker tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA $CI_REGISTRY_IMAGE:latest
-    # Annnd we push it.
     - docker push $CI_REGISTRY_IMAGE:latest
 
-# Finally, the goal here is to Docker tag any Git tag
-# GitLab will start a new pipeline everytime a Git tag is created, which is pretty awesome
 Push tag:
   variables:
-    # Again, we do not need the source code here. Just playing with Docker.
     GIT_STRATEGY: none
   stage: push
   only:
-    # We want this job to be run on tags only.
     - tags
   script:
     - docker pull $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
