Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,3 +68,7 @@ Push tag:
     - docker pull $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
     - docker tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
+        # Cleanup: Remove the local image to free disk space
+    - docker rmi -f $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA || true
+    - docker rmi -f $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME || true
+    - docker image prune -f
